Handling expired links [cleanup]
